@@ -121,7 +121,7 @@ public class SleeperTableLambdaIT {
         // Then
         Integer count = dynamoClient.scan(new ScanRequest().withTableName(tableProperties.get(PARTITION_TABLENAME)))
                 .getCount();
-        assertThat(count).isEqualTo(new Integer(1));
+        assertThat(count).isEqualTo(Integer.valueOf(1));
         s3Client.shutdown();
         dynamoClient.shutdown();
     }
@@ -198,7 +198,7 @@ public class SleeperTableLambdaIT {
         assertThat(tables).hasSize(1);
         TableProperties downloaded = new TableProperties(instanceProperties);
         downloaded.loadFromS3(s3Client, tableProperties.get(TABLE_NAME));
-        assertThat(downloaded.getInt(ROW_GROUP_SIZE)).isEqualTo(new Integer(20));
+        assertThat(downloaded.getInt(ROW_GROUP_SIZE)).isEqualTo(Integer.valueOf(20));
         s3Client.shutdown();
         dynamoClient.shutdown();
     }
